Pascal/test/cohadar/pascal/errors/bad_write.pas
program test;
var x:array[1..10] of integer;

begin
	writeln(x);
end.